# enso

./: .gitignore  .rust-toolchain.toml  .sql-formatter.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  buf.gen.yaml  buf.yaml  bunfig.toml  client.test.ts  client.ts  clippy.toml  crdt.test.ts  crdt.ts  flake.nix  hlc.test.ts  hlc.ts  index.ts  package.json  schema.test.ts  schema.ts  store.test.ts  store.ts  tsconfig.json
.claude/: settings.local.json
.cursor/rules/: design.mdc  typescript.mdc
.github/workflows/: ci-typescript.yaml  ci.yaml
.taskmaster/: config.json  state.json
.taskmaster/docs/: client-api.md  design.md  prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  tasks.json
client/: CLAUDE.md
client/shared/: assert.ts
client/typescript/: bundle-size.test.ts  index.test.ts  index.ts
client/typescript/internal/connection/: index.test.ts  index.ts  types.test.ts  types.ts
client/typescript/internal/database/: index.test.ts  index.ts  types.ts
client/typescript/internal/hlc/: index.test.ts  index.ts
client/typescript/proto/: protocol_pb.ts
docs/: auth-and-multitenancy-design.md  client-api.md  client-server-integration.md  design.md  protocol.md  storage-engine.md
proto/: CLAUDE.md  protocol.proto
proto/google/rpc/: code.proto  status.proto
server/: CLAUDE.md  Cargo.toml  build.rs
server/sql/: schema.sql
server/src/: client_connection.rs  config.rs  constants.rs  database_registry.rs  lib.rs  main.rs  proto.rs  server.rs  subscription.rs
server/src/auth/: app_config.rs  config_registry.rs  jwt.rs  mod.rs
server/src/e2e_tests/: helpers.rs  mod.rs  test_columns.rs  test_connect_request.rs  test_determinism.rs  test_empty_triples.rs  test_hlc_conflict_resolution.rs  test_insert_boolean.rs  test_insert_multiple_entities.rs  test_insert_multiple_triples.rs  test_insert_number.rs  test_insert_string.rs  test_invalid_attribute_id.rs  test_invalid_entity_id.rs  test_many_inserts.rs  test_missing_fields.rs  test_query_combined.rs  test_query_empty_database.rs  test_query_nonexistent.rs  test_query_optional.rs  test_query_where_not.rs  test_request_id.rs  test_sequence.rs  test_string_limits.rs  test_subscription_basic.rs  test_subscription_multi_connection.rs  test_update_changes_type.rs  test_update_overwrites.rs  test_update_response_format.rs
server/src/query/: context.rs  engine.rs  executor.rs  mod.rs  types.rs
server/src/simulation/: e2e_tests.rs  invariants.rs  message_gen.rs  mod.rs  simulator.rs  storage.rs  time.rs
server/src/storage/: allocator.rs  buffer_pool.rs  checkpoint.rs  database.rs  file.rs  gc.rs  hlc.rs  io.rs  mod.rs  overflow.rs  page.rs  recovery.rs  superblock.rs  time.rs  tombstone.rs  transaction.rs  triple.rs  wal.rs
server/src/storage/btree/: mod.rs  node.rs  tree.rs
server/src/storage/indexes/: attribute.rs  entity_attribute.rs  mod.rs  primary.rs
server/src/testing/: mod.rs
server/src/types/: change_record.rs  client_message.rs  hlc.rs  ids.rs  mod.rs  pending_triple.rs  query.rs  storage_triple_value.rs  triple.rs  triple_record.rs  triple_update_request.rs  triple_value.rs
(+26 files in other folders)
