[workspace]
members = ["server"]
resolver = "2"


[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

# Keep as few dependencies as possible
[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.31"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
turso = "0.3.2"


[workspace.lints]
clippy.expect_used = "deny"
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.module_name_repetitions = "allow"
clippy.no_effect_underscore_binding = "allow"
clippy.nursery = { level = "deny", priority = -1 }
clippy.pedantic = { level = "deny", priority = -1 }
clippy.perf = { level = "deny", priority = -1 }
clippy.struct_excessive_bools = "allow"
clippy.unused_async = "allow"
clippy.unwrap_used = "deny"
rust.unsafe_code = "deny"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
