[package]
edition.workspace = true
name = "server"
version.workspace = true

[dependencies]
axum.workspace = true
crc32fast.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
turso.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
